adding new exercise

--- a/lab2/style.css
+++ b/lab2/style.css
@@ -57,6 +57,9 @@ button {
 }
 
 .recordingLine {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
   margin-bottom: 20px;
 }
 
@@ -70,4 +73,15 @@ button {
 
 .delete {
   background-color: darkgrey;
+}
+
+.ProgressStatus {
+  width: 50%;
+  background-color: darkgrey;
+}
+
+.progressBar {
+  width: 2%;
+  height: 20px;
+  background-color: green;
 }
