fixing rendering function

--- a/notekeep/src/style.scss
+++ b/notekeep/src/style.scss
@@ -243,3 +243,15 @@ main {
     }
   }
 }
+
+#white {
+  background-color: #fff;
+}
+
+#yellow {
+  background-color: yellow;
+}
+
+#green {
+  background-color: green;
+}
