--- a/notekeep/src/style.scss
+++ b/notekeep/src/style.scss
@@ -181,6 +181,25 @@ main {
     justify-content: space-between;
     padding: 20px 0;
     height: 100%;
+
+    &_wrapper {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+    }
+
+    &_btn {
+      display: flex;
+      width: 100%;
+
+      button {
+        padding: 10px 20px;
+        border-radius: 10px;
+        border: none;
+        margin-right: 20px;
+        cursor: pointer;
+      }
+    }
   }
 }
 
