--- a/notekeep/src/style.scss
+++ b/notekeep/src/style.scss
@@ -201,6 +201,18 @@ main {
       }
     }
   }
+
+  &_white {
+    background-color: #fff;
+  }
+
+  &_yellow {
+    background-color: yellow;
+  }
+
+  &_green {
+    background-color: green;
+  }
 }
 
 .card {
@@ -230,47 +242,4 @@ main {
   .city {
     align-self: flex-start;
   }
-
-  .info {
-    cursor: pointer;
-    background-image: url("asset/chevron-down-solid.svg");
-    background-repeat: no-repeat;
-    background-size: 20px 20px;
-    background-position: center;
-    border: none;
-    height: 35px;
-    width: 35px;
-    border-radius: 50%;
-    outline: none;
-  }
-
-  .additional {
-    display: flex;
-    justify-content: space-around;
-    background-color: rgba(255, 255, 255, 0.4);
-    border-radius: 0 0 20px 20px;
-    width: 90%;
-    padding: 10px;
-    position: absolute;
-    z-index: -1;
-    transition: top ease-in-out 0.3s;
-    top: 0;
-
-    p,
-    h5 {
-      color: #fff;
-    }
-  }
-}
-
-#white {
-  background-color: #fff;
-}
-
-#yellow {
-  background-color: yellow;
-}
-
-#green {
-  background-color: green;
 }
